unpackaged/main/default/objects/FPC_Proc_RateRev__c/FPC_Proc_RateRev__c.object-meta.xml
<CustomObject>
    <description>EPP Rate Review</description>
    <label>Processor Rate Review</label>
    <nameField>
        <label>Processor Rate Review ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processor Rate Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>