unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Amex_Per_Item_Existing_Rates__c.field-meta.xml
<CustomField>
    <fullName>Amex_Per_Item_Existing_Rates__c</fullName>
    <description>Amex Per-Item  Existing Rates</description>
    <inlineHelpText>Amex Per-Item  Existing Rates</inlineHelpText>
    <label>Amex Per-Item  Existing Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>