unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Amex_Per_Item_New_Expense__c.field-meta.xml
<CustomField>
    <fullName>Amex_Per_Item_New_Expense__c</fullName>
    <description>American Express Per-Item  New Expense</description>
    <formula>Amex_Per_Item_Quantity__c * Amex_Per_Item_New_Rates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>American Express Per-Item  New Expense</inlineHelpText>
    <label>Amex Per-Item New Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>