unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Annual_Savings__c.field-meta.xml
<CustomField>
    <fullName>Annual_Savings__c</fullName>
    <description>This field will calculate the yearly savings of the proposed credit card processing plan.</description>
    <formula>Monthly_Savings__c *12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will calculate the yearly savings of the proposed credit card processing plan.</inlineHelpText>
    <label>Annual Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>