unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Average_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Average_Ticket__c</fullName>
    <description>Average Credit Card Ticket size.</description>
    <inlineHelpText>Type in the customer's average credit card ticket size.</inlineHelpText>
    <label>Average Ticket</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>