unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Batch_Fee_Existing_Expense__c.field-meta.xml
<CustomField>
    <fullName>Batch_Fee_Existing_Expense__c</fullName>
    <description>Batch Fee  Existing Expense</description>
    <formula>Batch_Fee_Quantity__c * Batch_Fee_Existing_Rates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Batch Fee  Existing Expense</inlineHelpText>
    <label>Batch Fee  Existing Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>