unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Batch_Fee_New_Rates__c.field-meta.xml
<CustomField>
    <fullName>Batch_Fee_New_Rates__c</fullName>
    <description>Batch Fee  New Rates</description>
    <inlineHelpText>Batch Fee  New Rates</inlineHelpText>
    <label>Batch Fee  New Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>