unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Batch_Fee_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Batch_Fee_Quantity__c</fullName>
    <description>Batch Fee Quantity</description>
    <inlineHelpText>Batch Fee Quantity</inlineHelpText>
    <label>Batch Fee Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>