unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Debit_Item_New_Rates__c.field-meta.xml
<CustomField>
    <fullName>Debit_Item_New_Rates__c</fullName>
    <description>Debit Item  New Rates</description>
    <inlineHelpText>Debit Item  New Rates</inlineHelpText>
    <label>Debit Item  New Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>