unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Discover_Mid_Qualified_New_Rates__c.field-meta.xml
<CustomField>
    <fullName>Discover_Mid_Qualified_New_Rates__c</fullName>
    <description>Discover Mid-Qualified New Rates</description>
    <inlineHelpText>Discover Mid-Qualified New Rates</inlineHelpText>
    <label>Discover Mid-Qualified New Rates</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>