unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Discover_Qualified_Existing_Expense__c.field-meta.xml
<CustomField>
    <fullName>Discover_Qualified_Existing_Expense__c</fullName>
    <description>Discover Qualified Existing Expense</description>
    <formula>Discover_Qualfied_Average_Volume__c * Discover_Qualified_Existing_Rates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Discover Qualified Existing Expense</inlineHelpText>
    <label>Discover Qualified Existing Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>