unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/DiscoverMid_Qualified_New_Expense__c.field-meta.xml
<CustomField>
    <fullName>DiscoverMid_Qualified_New_Expense__c</fullName>
    <description>DiscoverMid-Qualified New Expense</description>
    <formula>Discover_Mid_Qualified_Average_Volume__c * Discover_Mid_Qualified_New_Rates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DiscoverMid-Qualified New Expense</inlineHelpText>
    <label>DiscoverMid-Qualified New Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>