unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Existing_Fees_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Existing_Fees_Subtotal__c</fullName>
    <description>This field will calculate the existing fee expense for the rate review.</description>
    <formula>Discover_Per_Item_Existing_Expense__c  +  MC_Per_Item_Existing_Expense__c  +  Offline_Debit_Per_Item_Existing_Expense__c  +  Visa_Per_Item_Existing_Expense__c + Existing_Processor_Fee_Summary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will calculate the existing fee expense for the rate review.</inlineHelpText>
    <label>Existing Fees Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>