unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Existing_Processor_Fee_Summary__c.field-meta.xml
<CustomField>
    <fullName>Existing_Processor_Fee_Summary__c</fullName>
    <description>This field will sum the existing rate processor fees for a rate review.</description>
    <inlineHelpText>This field will sum the existing rate processor fees for a rate review.</inlineHelpText>
    <label>Existing Processor Fee Summary</label>
    <summarizedField>FPC_Proc_RateRev_Fees__c.Existing_Expense__c</summarizedField>
    <summaryForeignKey>FPC_Proc_RateRev_Fees__c.Processor_Rate_Review__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>