unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Existing_ProcessorID__c.field-meta.xml
<CustomField>
    <fullName>Existing_ProcessorID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID for the existing processing provider in a custom object lookup.</description>
    <inlineHelpText>ID for the existing processing provider in a custom object lookup.</inlineHelpText>
    <label>Existing ProcessorID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Processor Rate Reviews (Existing ProcessorID)</relationshipLabel>
    <relationshipName>Processor_Rate_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>