unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/MC_Mid_Qualified_Average_Volume__c.field-meta.xml
<CustomField>
    <fullName>MC_Mid_Qualified_Average_Volume__c</fullName>
    <description>MC Mid-Qualified Average Volume</description>
    <inlineHelpText>MC Mid-Qualified Average Volume</inlineHelpText>
    <label>MC Mid-Qualified Average Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>