unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/MC_Mid_Qualified_New_Rates__c.field-meta.xml
<CustomField>
    <fullName>MC_Mid_Qualified_New_Rates__c</fullName>
    <description>MC Mid-Qualified New Rates</description>
    <inlineHelpText>MC Mid-Qualified New Rates</inlineHelpText>
    <label>MC Mid-Qualified New Rates</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>