unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/MC_Per_Item_Existing_Expense__c.field-meta.xml
<CustomField>
    <fullName>MC_Per_Item_Existing_Expense__c</fullName>
    <description>MC Per-Item  Existing Expense</description>
    <formula>Visa_Per_Item_Quantity__c * Visa_Per_Item_Existing_Rates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>MC Per-Item  Existing Expense</inlineHelpText>
    <label>MC Per-Item  Existing Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>