unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/MC_Per_Item_Existing_Rates__c.field-meta.xml
<CustomField>
    <fullName>MC_Per_Item_Existing_Rates__c</fullName>
    <description>MC Per-Item  Existing Rates</description>
    <inlineHelpText>MC Per-Item  Existing Rates</inlineHelpText>
    <label>MC Per-Item  Existing Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>