unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/MC_Per_Item_New_Expense__c.field-meta.xml
<CustomField>
    <fullName>MC_Per_Item_New_Expense__c</fullName>
    <description>MC Per-Item  New Expense</description>
    <formula>MC_Per_Item_Quantity__c * MC_Per_Item_New_Rates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>MC Per-Item  New Expense</inlineHelpText>
    <label>MC Per-Item  New Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>