unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/MC_Per_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>MC_Per_Item_Quantity__c</fullName>
    <description>MC Per-Item Quantity</description>
    <inlineHelpText>MC Per-Item Quantity</inlineHelpText>
    <label>MC Per-Item Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>