unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/MC_Qualified_New_Rates__c.field-meta.xml
<CustomField>
    <fullName>MC_Qualified_New_Rates__c</fullName>
    <description>MCQualified New Rates</description>
    <inlineHelpText>MCQualified New Rates</inlineHelpText>
    <label>MC Qualified New Rates</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>