unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/New_Processor_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Processor_Name__c</fullName>
    <description>Customer's new processing provider.</description>
    <inlineHelpText>Type in the customer's new processing provider.</inlineHelpText>
    <label>New Processor Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>