unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/New_Rates_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>New_Rates_Subtotal__c</fullName>
    <description>This field will calculate the New Rate subtotal for a Rate Review.</description>
    <formula>(DiscoverQualified_New_Expense__c  +  DiscoverMid_Qualified_New_Expense__c  +  DiscoverNon_Qualified_New_Expense__c) + 
( MCQualified_New_Expense__c +  MCMid_Qualified_New_Expense__c +  MCNon_Qualified_New_Expense__c) +  (Offline_Debit_Qualified_New_Expense__c + Offline_Debit_Mid_Qual_New_Expense__c + Offline_Debit_Non_Qual_New_Expense__c ) + 
( Visa_Qualified_New_Expense__c + Visa_Mid_Qualified_New_Expense__c + Visa_Non_Qualified_New_Expense__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will calculate the New Rate subtotal for a Rate Review.</inlineHelpText>
    <label>New Rates Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>