unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Offline_Debit_Mid_Qualified_Avg_Volume__c.field-meta.xml
<CustomField>
    <fullName>Offline_Debit_Mid_Qualified_Avg_Volume__c</fullName>
    <description>Offline Debit Mid-Qualified Avg Volume</description>
    <inlineHelpText>Offline Debit Mid-Qualified Avg Volume</inlineHelpText>
    <label>Offline Debit Mid-Qualified Avg Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>