unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Offline_Debit_Mid_Qualified_New_Rates__c.field-meta.xml
<CustomField>
    <fullName>Offline_Debit_Mid_Qualified_New_Rates__c</fullName>
    <description>Offline Debit Mid-Qualified New Rates</description>
    <inlineHelpText>Offline Debit Mid-Qualified New Rates</inlineHelpText>
    <label>Offline Debit Mid-Qualified New Rates</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>