unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Offline_Debit_Non_Qual_Existing_Rates__c.field-meta.xml
<CustomField>
    <fullName>Offline_Debit_Non_Qual_Existing_Rates__c</fullName>
    <description>Offline Debit Non-Qual Existing Rates</description>
    <inlineHelpText>Offline Debit Non-Qual Existing Rates</inlineHelpText>
    <label>Offline Debit Non-Qual Existing Rates</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>