unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Offline_Debit_Per_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Offline_Debit_Per_Item_Quantity__c</fullName>
    <description>Offline Debit Per-Item Quantity</description>
    <inlineHelpText>Offline Debit Per-Item Quantity</inlineHelpText>
    <label>Offline Debit Per-Item Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>