unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Offline_Debit_Qualified_Average_Volume__c.field-meta.xml
<CustomField>
    <fullName>Offline_Debit_Qualified_Average_Volume__c</fullName>
    <description>Offline Debit Qualified Average Volume</description>
    <inlineHelpText>Offline Debit Qualified Average Volume</inlineHelpText>
    <label>Offline Debit Qualified Average Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>