unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Offline_Debit_Qualified_Existing_Expense__c.field-meta.xml
<CustomField>
    <fullName>Offline_Debit_Qualified_Existing_Expense__c</fullName>
    <description>Offline Debit Qualified Existing Expense</description>
    <formula>Offline_Debit_Qualified_Average_Volume__c * Offline_Debit_Qualified_Existing_Rates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Offline Debit Qualified Existing Expense</inlineHelpText>
    <label>Offline Debit Qualified Existing Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>