unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Total_New__c.field-meta.xml
<CustomField>
    <fullName>Total_New__c</fullName>
    <description>Total cost to customer processing with FPC.</description>
    <inlineHelpText>Type in the total cost to the customer for processing credit cards with FPC.</inlineHelpText>
    <label>Total New</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>