unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Visa_Mid_Qualified_Existing_Expense__c.field-meta.xml
<CustomField>
    <fullName>Visa_Mid_Qualified_Existing_Expense__c</fullName>
    <description>Existing Visa Mid-Qualified Expense</description>
    <formula>Visa_Mid_Qualified_Average_Volume__c  *  Visa_Mid_Qualified_Existing_Rates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Existing Visa Mid-Qualified Expense (Formula Field)</inlineHelpText>
    <label>Visa Mid-Qualified Existing Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>