unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Visa_Non_Qualified_Existing_Expense__c.field-meta.xml
<CustomField>
    <fullName>Visa_Non_Qualified_Existing_Expense__c</fullName>
    <description>Visa Non-Qualified Existing Expense</description>
    <formula>Visa_Non_Qualified_Average_Volume__c * Visa_Non_Qualified_Existing_Rates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Visa Non-Qualified Existing Expense</inlineHelpText>
    <label>Visa Non-Qualified Existing Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>