unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Visa_Non_Qualified_New_Rates__c.field-meta.xml
<CustomField>
    <fullName>Visa_Non_Qualified_New_Rates__c</fullName>
    <description>Visa Non-Qualified New Rates</description>
    <inlineHelpText>Visa Non-Qualified New Rates</inlineHelpText>
    <label>Visa Non-Qualified New Rates</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>