unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Visa_Per_Item_Existing_Rates__c.field-meta.xml
<CustomField>
    <fullName>Visa_Per_Item_Existing_Rates__c</fullName>
    <description>Visa Per-Item  Existing Rates</description>
    <inlineHelpText>Visa Per-Item  Existing Rates</inlineHelpText>
    <label>Visa Per-Item  Existing Rates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>