unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Visa_Per_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Visa_Per_Item_Quantity__c</fullName>
    <description>Visa Per-Item Quantity</description>
    <inlineHelpText>Visa Per-Item Quantity</inlineHelpText>
    <label>Visa Per-Item Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>