unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Visa_Qualified_Existing_Expense__c.field-meta.xml
<CustomField>
    <fullName>Visa_Qualified_Existing_Expense__c</fullName>
    <description>Existing Visa Qualified Expense</description>
    <formula>Visa_Qualified_Volume_Average__c  *  Visa_Qualified_Existing_Rates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Existing Visa Qualified Expense (Formula Field)</inlineHelpText>
    <label>Visa Qualified Existing Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>