unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Visa_Qualified_Existing_Rates__c.field-meta.xml
<CustomField>
    <fullName>Visa_Qualified_Existing_Rates__c</fullName>
    <description>Visa Qualified Existing Rates</description>
    <inlineHelpText>Visa Qualified Existing Rates</inlineHelpText>
    <label>Visa Qualified Existing Rates</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>