unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Visa_Qualified_New_Expense__c.field-meta.xml
<CustomField>
    <fullName>Visa_Qualified_New_Expense__c</fullName>
    <description>Visa Qualified New Expense</description>
    <formula>Visa_Qualified_Volume_Average__c  * MC_Qualified_New_Rates__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Visa Qualified New Expense</inlineHelpText>
    <label>Visa Qualified New Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>