unpackaged/main/default/objects/FPC_Proc_RateRev__c/fields/Visa_Qualified_Volume_Average__c.field-meta.xml
<CustomField>
    <fullName>Visa_Qualified_Volume_Average__c</fullName>
    <description>Visa Qualified Volume Average</description>
    <inlineHelpText>Visa Qualified Volume Average</inlineHelpText>
    <label>Visa Qualified Volume Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>